fixed find bugs errors